--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node app.js",
     "test": "nyc --reporter=html --reporter=text mocha --exit"
   },
-  "author": "riaan@entersekt.com",
+  "author": "riaan@entersektt.com",
   "description": "Basic to do list exercise",
   "devDependencies": {
     "chai": "^4.2.0",
